to list instead of collections